--- a/alcide-skan-viewer/package.json
+++ b/alcide-skan-viewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcideio/alcide-skan-viewer",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "private": false,
   "keywords": [
     "kubernetes",
@@ -8,34 +8,37 @@
     "skan",
     "compliance",
     "config-scan",
-    "alcide"
+    "rapid7",
+    "insightcloudsec",
+    "helm"
   ],
-  "author": "alcideio",
+  "author": "Rapid7",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/alcideio/skan/issues"
   },
   "homepage": "https://github.com/alcideio/skan",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.4.1",
-    "css-loader": "^3.5.3",
-    "file-loader": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-switch-button-react": "^1.2.0",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "log-timestamp": "^0.3.0",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "react-select": "^3.1.0",
-    "react-spinners": "^0.8.3",
-    "style-loader": "^1.2.1"
+    "node-sass": "^7.0.1",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "^2.1.3",
+    "react-select": "^5.3.2",
+    "react-spinners": "^0.12.0",
+    "style-loader": "^3.3.1"
   },
   "scripts": {
     "webpack-dev-server": "webpack-dev-server",
@@ -61,16 +64,16 @@
     "dist"
   ],
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "babel-loader": "^8.2.5",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "path": "^0.12.7",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   }
 }
